--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-notifications-menu",
+  "name": "react-notifications-menu-HawkV",
   "version": "1.0.5",
   "description": "Notifications library",
-  "author": "NaveenrajV",
+  "author": "HawkV",
   "license": "MIT",
-  "repository": "Codebrahma/react-notifications-menu",
+  "repository": "HawkV/react-notifications-menu",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -24,8 +24,8 @@
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "^15.0.0 || ^16.0.0 || ^17.0.0",
+    "react-dom": "^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
