--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-notifications-menu",
   "version": "1.0.5",
   "description": "Notifications library",
-  "author": "HawkV",
+  "author": "Ganapathi Jayam",
   "license": "MIT",
-  "repository": "HawkV/react-notifications-menu",
+  "repository": "ganapathi12/react-notifications-menu",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
